2009-03-02  Murray Cumming  <murrayc@murrayc.com>

	* Many .h files: Changed many protected to private to make the API 
	clearer. This is particularly important for libglom, as I start 
	thinking of wrapping the API for Java/Web.

2009-03-02  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Added an --enable-postgresql option, so we can have 
	embedded builds that only use SQLite. Disable SQLite by default.

	* glom/utility_widgets/filechooserdialog_saveextras.[h|cc]:
	Don't mention the backend names if only SQLite is disabled, to avoid 
	confronting people with unnecessary technicalese.

	* glom/application.cc:
	* glom/dialog_connection.cc:
	* glom/frame_glom.cc:
	* glom/libglom/connectionpool_backends/Makefile.am:
	* glom/libglom/connectionpool_backends/postgres.h:
	* glom/libglom/connectionpool_backends/postgres_central.[h|cc]:
	* glom/libglom/connectionpool_backends/sqlite.h:
	* glom/libglom/data_structure/glomconversions.h:
	* glom/libglom/document/document_glom.[h|cc]:
	* glom/libglom/gst-package.c:
	* glom/libglom/test_connectionpool.cc:
	* glom/main.cc:
	Added ifdefs to allow builds with -enable-postgresql=no.

	* glom/dialog_import_csv.cc: Replace gettext() with _().

1.9.3:

2009-02-27  Armin Burgmeier  <armin@openismus.com>

	* glom/frame_glom.cc:
	(connection_request_password_and_choose_new_database_name): When
	creating a new self-hosting postgres database, then store the port it
	uses within the document, so that remote connections (using browse
	network) can connect to the newly created database. Bug #572982.

2009-02-27  Armin Burgmeier  <armin@openismus.com>

	* glom/mode_design/fields/box_db_table_definition.cc (on_adddel_add):
	Add newly added field into document before refreshing m_vecFields, so
	that Base_DB::get_fields_for_table() has an up-to-date document. This
	fixes changing newly added fields with SQLite.

	* configure.in: Fixed a typo, which caused libgda-sqlite-4.0 not being
	required even when SQLite support was enabled.

1.9.2: